crates/core/tests/integration/snapshots/integration__integration__check__repo-duplicates.tar.gz.snap
---
source: crates/core/tests/integration/check.rs
expression: check_results
---
CheckResults(
    [],
)
